--- a/server/package.json
+++ b/server/package.json
@@ -6,14 +6,12 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
-
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@supabase/supabase-js": "^2.78.0",
     "bcrypt": "^6.0.0",
     "body": "^5.1.0",
     "cors": "^2.8.5",
@@ -26,5 +24,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
-  }
+  },
+  "description": ""
 }
